feat: Ajout TP2 et Cours 2

--- a/fr/miage-cours/index.html
+++ b/fr/miage-cours/index.html
@@ -207,7 +207,7 @@
     <div class="rounded-xl border border-border overflow-hidden hover:border-accent/40 transition-colors" data-expandable>
       <div class="p-5 cursor-pointer" data-expandable-trigger>
         <div class="flex items-start justify-between gap-3">
-          <h3 class="font-semibold text-lg">Support cours 1</h3>
+          <h3 class="font-semibold text-lg">Cours 1</h3>
           <button class="shrink-0 mt-1 text-text-muted hover:text-text transition-colors" aria-label="Expand">
         <span class="w-5 h-5 inline-flex transition-transform duration-200" data-expandable-chevron><svg
   xmlns="http://www.w3.org/2000/svg"
@@ -263,6 +263,217 @@
   <path d="M16 17H8" />
 </svg></span>
           <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">Rendu support cours 1</span>
+          <span class="text-xs text-text-muted uppercase">document</span>
+        </a></div>
+      </div>
+    </div>
+    <div class="rounded-xl border border-border overflow-hidden hover:border-accent/40 transition-colors" data-expandable>
+      <div class="p-5 cursor-pointer" data-expandable-trigger>
+        <div class="flex items-start justify-between gap-3">
+          <h3 class="font-semibold text-lg">Cours 2 - HubSpot</h3>
+          <button class="shrink-0 mt-1 text-text-muted hover:text-text transition-colors" aria-label="Expand">
+        <span class="w-5 h-5 inline-flex transition-transform duration-200" data-expandable-chevron><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="m6 9 6 6 6-6" />
+</svg></span>
+      </button>
+        </div>
+        <div data-expandable-preview>
+        
+        <div class="mt-3"><span class="inline-flex items-center gap-1 text-xs text-text-muted bg-surface-alt px-2 py-1 rounded-full"><span class="w-4 h-4" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551" />
+</svg></span> 8</span></div>
+      </div>
+      </div>
+      <div class="px-5 pb-5 border-t border-border pt-4 space-y-4 hidden" data-expandable-content>
+        
+        <div class="space-y-2">
+        <a href="/files/resources/0fb2mrgxrqghir5/1_crm_version_etudiant_ssylabnf2e.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 p-3 rounded-lg border border-border hover:border-accent/40 hover:bg-surface-alt transition-all group">
+          <span class="w-5 h-5 text-text-muted" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z" />
+  <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+  <path d="M10 9H8" />
+  <path d="M16 13H8" />
+  <path d="M16 17H8" />
+</svg></span>
+          <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">CRM Version Etudiant</span>
+          <span class="text-xs text-text-muted uppercase">document</span>
+        </a>
+        <a href="/files/resources/w95wzcdlkixteow/2_termes_techniques_crm_version_etudiant_atm1kzklgd.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 p-3 rounded-lg border border-border hover:border-accent/40 hover:bg-surface-alt transition-all group">
+          <span class="w-5 h-5 text-text-muted" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z" />
+  <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+  <path d="M10 9H8" />
+  <path d="M16 13H8" />
+  <path d="M16 17H8" />
+</svg></span>
+          <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">Termes techniques CRM version Etudiant.pdf
+</span>
+          <span class="text-xs text-text-muted uppercase">document</span>
+        </a>
+        <a href="/files/resources/gj9ht2bzs35sddp/3_pipeline_vs_funnel_qxex1ygfb7.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 p-3 rounded-lg border border-border hover:border-accent/40 hover:bg-surface-alt transition-all group">
+          <span class="w-5 h-5 text-text-muted" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z" />
+  <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+  <path d="M10 9H8" />
+  <path d="M16 13H8" />
+  <path d="M16 17H8" />
+</svg></span>
+          <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">Pipeline Vs Funnel</span>
+          <span class="text-xs text-text-muted uppercase">document</span>
+        </a>
+        <a href="/files/resources/cew9vcww9nk5ro4/4_sc_nario_simple_5ncy3oor3z.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 p-3 rounded-lg border border-border hover:border-accent/40 hover:bg-surface-alt transition-all group">
+          <span class="w-5 h-5 text-text-muted" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z" />
+  <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+  <path d="M10 9H8" />
+  <path d="M16 13H8" />
+  <path d="M16 17H8" />
+</svg></span>
+          <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">Scénario Simple</span>
+          <span class="text-xs text-text-muted uppercase">document</span>
+        </a>
+        <a href="/files/resources/65bjnat7dwggynn/6_pipeline_de_vente_vs_workflow_25mzj7ta4b.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 p-3 rounded-lg border border-border hover:border-accent/40 hover:bg-surface-alt transition-all group">
+          <span class="w-5 h-5 text-text-muted" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z" />
+  <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+  <path d="M10 9H8" />
+  <path d="M16 13H8" />
+  <path d="M16 17H8" />
+</svg></span>
+          <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">Pipeline de Vente</span>
+          <span class="text-xs text-text-muted uppercase">document</span>
+        </a>
+        <a href="/files/resources/sslv3oh3sjm01ju/8_hubspot_653i3fsb5r.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 p-3 rounded-lg border border-border hover:border-accent/40 hover:bg-surface-alt transition-all group">
+          <span class="w-5 h-5 text-text-muted" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z" />
+  <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+  <path d="M10 9H8" />
+  <path d="M16 13H8" />
+  <path d="M16 17H8" />
+</svg></span>
+          <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">Hubspot</span>
+          <span class="text-xs text-text-muted uppercase">document</span>
+        </a>
+        <a href="/files/resources/k8gg2d27kef0dt8/crm_vs_pgi_version_etud_aq9eg7lzyo.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 p-3 rounded-lg border border-border hover:border-accent/40 hover:bg-surface-alt transition-all group">
+          <span class="w-5 h-5 text-text-muted" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z" />
+  <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+  <path d="M10 9H8" />
+  <path d="M16 13H8" />
+  <path d="M16 17H8" />
+</svg></span>
+          <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">CRM vs PGI Version Etu</span>
+          <span class="text-xs text-text-muted uppercase">document</span>
+        </a>
+        <a href="/files/resources/091431j4gz4xqx6/pgi_gh408xe13w.xlsx" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 p-3 rounded-lg border border-border hover:border-accent/40 hover:bg-surface-alt transition-all group">
+          <span class="w-5 h-5 text-text-muted" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z" />
+  <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+  <path d="M10 9H8" />
+  <path d="M16 13H8" />
+  <path d="M16 17H8" />
+</svg></span>
+          <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">PGI Exemple</span>
           <span class="text-xs text-text-muted uppercase">document</span>
         </a></div>
       </div>
