--- a/fr/miage-works/index.html
+++ b/fr/miage-works/index.html
@@ -207,7 +207,7 @@
     <div class="rounded-xl border border-border overflow-hidden hover:border-accent/40 transition-colors" data-expandable>
       <div class="p-5 cursor-pointer" data-expandable-trigger>
         <div class="flex items-start justify-between gap-3">
-          <h3 class="font-semibold text-lg">Rendu TP 1</h3>
+          <h3 class="font-semibold text-lg">TP 1</h3>
           <button class="shrink-0 mt-1 text-text-muted hover:text-text transition-colors" aria-label="Expand">
         <span class="w-5 h-5 inline-flex transition-transform duration-200" data-expandable-chevron><svg
   xmlns="http://www.w3.org/2000/svg"
@@ -263,6 +263,69 @@
   <path d="M16 17H8" />
 </svg></span>
           <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">TP 1</span>
+          <span class="text-xs text-text-muted uppercase">document</span>
+        </a></div>
+      </div>
+    </div>
+    <div class="rounded-xl border border-border overflow-hidden hover:border-accent/40 transition-colors" data-expandable>
+      <div class="p-5 cursor-pointer" data-expandable-trigger>
+        <div class="flex items-start justify-between gap-3">
+          <h3 class="font-semibold text-lg">TP 2</h3>
+          <button class="shrink-0 mt-1 text-text-muted hover:text-text transition-colors" aria-label="Expand">
+        <span class="w-5 h-5 inline-flex transition-transform duration-200" data-expandable-chevron><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="m6 9 6 6 6-6" />
+</svg></span>
+      </button>
+        </div>
+        <div data-expandable-preview>
+        
+        <div class="mt-3"><span class="inline-flex items-center gap-1 text-xs text-text-muted bg-surface-alt px-2 py-1 rounded-full"><span class="w-4 h-4" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551" />
+</svg></span> 1</span></div>
+      </div>
+      </div>
+      <div class="px-5 pb-5 border-t border-border pt-4 space-y-4 hidden" data-expandable-content>
+        
+        <div class="space-y-2">
+        <a href="/files/resources/fdjkxkh6gtkjrdj/tp_d_couverte_arnaud_418cy08zmg.pdf" target="_blank" rel="noopener noreferrer" class="flex items-center gap-3 p-3 rounded-lg border border-border hover:border-accent/40 hover:bg-surface-alt transition-all group">
+          <span class="w-5 h-5 text-text-muted" style="display:inline-flex"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z" />
+  <path d="M14 2v5a1 1 0 0 0 1 1h5" />
+  <path d="M10 9H8" />
+  <path d="M16 13H8" />
+  <path d="M16 17H8" />
+</svg></span>
+          <span class="flex-1 text-sm font-medium group-hover:text-accent transition-colors">Rendu TP2</span>
           <span class="text-xs text-text-muted uppercase">document</span>
         </a></div>
       </div>
